# snacka-kubernetes

./: README.md
snacka-admission-controllers/: .dockerignore  Cargo.toml  Dockerfile  README.md
snacka-admission-controllers/deploy/: generate-cert.sh  mutate-webhook.yaml  test-pod.yml  tls-secret.yaml  validate-webhook.yaml
snacka-admission-controllers/examples/: ar.json  example.json
snacka-admission-controllers/src/: main.rs
snacka-certs/: 1_install_app.sh  README.md
snacka-certs/manifests/: kuard.yaml  minimal-ingress-bad1.yaml  minimal-ingress.yaml
snacka-certs/scripts/: create_self_signed_cert_1.sh  create_self_signed_cert_2.sh
snacka-container-scanners/: Dockerfile  presentation.md  presentation.sh
snacka-container-scanners/frontend/: package.json
snacka-dapr/k8s-event-app-demo-dapr-main/: README.md
snacka-istio/: README.txt
snacka-keda/demo1-hpa/: 1_setup_cluster.sh  2_install-metrics-server.sh  3_hpa_demo.sh
snacka-keda/demo2-keda/: demo.sh
snacka-kind/kind-snacka-kubernetes-main/: 0-intro  1-install-docker.txt  100-faq.notes  2-first-cluster.txt  3.switch-clusters-access.txt  4-kind-containers.txt  5-how-it-works.txt  6-multi-cluster.txt  7-troubleshoot.txt  8-prep-ingress.txt  9-metallb.txt  README.md  kind-nodeport-config.yaml  nodeport-service.yaml  notes.txt
snacka-kustomize/: README.md
snacka-neuvector/: nv_sec_rule_p.yaml  run.sh  values.yaml
snacka-pss/: README.md  script.md  ubuntu-hostpath.yaml  ubuntu-hostpid.yaml  ubuntu-iptables.yaml  ubuntu-nonroot.yaml  ubuntu-priv.yaml  ubuntu.yaml
snacka-wasm/: README.md
(+31 files in other folders)
