[package]
name = "rusty-admission"
version = "0.1.0"
edition = "2021"
description = "An Admission webhook in Rust"
authors = ["Fredrik Broman <fredrik.broman@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/bromaniac/rusty-admission"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
json-patch = "0.2.7"
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = { version = "0.76.0", features = ["admission"] }
kube-core = "0.76.0"
serde = "1.0.150"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version =  "0.3.16", features = ["env-filter"] }

[profile.release]
strip = true